--- a/20210512.html
+++ b/20210512.html
@@ -4,4 +4,4 @@ p, li { white-space: pre-wrap; }
 </style></head><body style=" font-family:'Arial'; font-size:12pt; font-weight:400; font-style:normal;">
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><span style=" font-size:xx-large; font-weight:600;">Diary entry wo mei 12 2021<br /></span><span style=" font-size:x-large; font-weight:600;">Today's events</span></p>
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p></body></html>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br />Toffe dingen gevonden in pathlib (<span style=" font-style:italic;">touch</span>)</p></body></html>
